(bigz) Fixing spacing for top panel

--- a/src/app/components/board/board.component.scss
+++ b/src/app/components/board/board.component.scss
@@ -1,8 +1,8 @@
 #top-panel {
   display: flex;
   margin: 0 auto 1rem;
-  width: 32rem;
-  justify-content: space-around;
+  width: 20rem;
+  justify-content: space-between;
 
   #difficulty-selector {
   }
